--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
     #000 0%, 
-    #1e2021 44.96%, 
+    #2b4ce2 44.96%, 
     #1e2022 100% 
   ); 
 } 
