--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --cor-destaque: #ed145b; 
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
-    #2949d6 0%, 
+    #48579b 0%, 
     #2b4ce2 44.96%, 
     #2270d6 100% 
   ); 
