--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
     #48579b 0%, 
-    #2b4ce2 44.96%, 
-    #2270d6 100% 
+    #48579b 44.96%, 
+    #48579b 100% 
   ); 
 } 
 
