--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); 
 
 :root { 
-  --cor-destaque: #ac3764; 
+  --cor-destaque: #aa2a5b; 
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
     #48579b 0%, 
