--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
     #48579b 0%, 
-    #4253a3 44.96%, 
+    #3e53b1 44.96%, 
     #48579b 100% 
   ); 
 } 
