--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); 
 
 :root {
-  --cor-destaque: #d61f3e;
+  --cor-destaque: #cc1736f3;
   --cor-gradiente-preto: linear-gradient(
     113deg,
     #357a9c 0%,
