--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); 
 
 :root {
-  --cor-destaque: hsla(350, 75%, 46%, 0.953);
+  --cor-destaque: hsl(278, 81%, 37%);
   --cor-gradiente-preto: linear-gradient(
     113deg,
     #357a9c 0%,
@@ -71,7 +71,7 @@ h1 {
   border-radius: 0.5rem;
   border: none;
   background: var(--cor-destaque);
-  color: #9b149b;
+  color: #0c020c;
   font-size: 2.5rem;
   font-weight: 500;
   line-height: normal;
